--- a/public/index.html
+++ b/public/index.html
@@ -37,5 +37,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script async defer
+      src="https://connect.facebook.net/zh_TW/sdk.js"></script>
   </body>
 </html>
