Put GA tracker in .env

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <script async src='https://www.google-analytics.com/analytics.js'></script>
     <script>
       window.ga = window.ga || function () { (ga.q = ga.q || []).push(arguments) }; ga.l = +new Date;
-      ga('create', 'UA-98468513-9', 'auto');
+      ga('create', '%REACT_APP_GA_ID%', 'auto');
       ga('send', 'pageview');
     </script>
   </head>
